# sam3m

./: .gitignore  README.md  pixi.toml  pyproject.toml
configs/: train.yaml  train_video.yaml
knowledge/: architecture.md  data_pipeline.md  gotchas.md
sam3m/: __init__.py
sam3m/data/: __init__.py  class_mapping.py  dataset.py  sampler.py  transforms.py  video_dataset.py  zstack_dataset.py
sam3m/inference/: postprocess.py  predict.py
sam3m/losses/: __init__.py  instance_loss.py  losses.py
sam3m/model/: cellmap_head.py  lora.py  sam3_cellmap.py
sam3m/training/: split.py  trainer.py
scripts/: smoke_test.py  train.py
