[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3m"
version = "0.1.0"
description = "SAM3 fine-tuning for CellMap 3D EM organelle segmentation"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "torchvision>=0.22",
    "numpy>=1.26,<2",
    "scipy>=1.14",
    "zarr>=2.16",
    "monai>=1.3",
    "hydra-core>=1.3",
    "tensorboard>=2.18",
    "wandb>=0.18",
    "tqdm",
    "scikit-image>=0.24",
    "scikit-learn>=1.5",
    "einops>=0.8",
    "timm>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "matplotlib>=3.9"]

[tool.setuptools.packages.find]
include = ["sam3m*"]
